move olympus to kotlin